<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="record_button">Record Button</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="open_activity">Open Activity</string>
    <string name="previous_mask">Previous Mask</string>
    <string name="next_mask">Next Mask</string>
    <string name="screenshot">Screenshot</string>
    <string name="record">Record</string>
</resources>