<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeepAIActivity">

    <SurfaceView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/surface"/>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageButton
            android:id="@+id/recordButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"
            android:background="@null"
            android:contentDescription="@string/record_button"
            android:scaleType="centerInside"
            android:src="@drawable/record_selector" />

        <ImageButton
            android:id="@+id/switchCamera"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:background="@null"
            android:contentDescription="@string/switch_camera"
            android:scaleType="centerInside"
            android:src="@drawable/camera_white" />

        <ImageButton
            android:id="@+id/openActivity"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="false"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="5dp"
            android:background="@null"
            android:contentDescription="@string/open_activity"
            android:scaleType="centerInside"
            android:src="@android:drawable/ic_menu_close_clear_cancel" />

        <ImageButton
            android:id="@+id/previousMask"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:background="@null"
            android:contentDescription="@string/previous_mask"
            android:scaleType="centerInside"
            android:src="@drawable/arrow_left" />

        <ImageButton
            android:id="@+id/nextMask"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@null"
            android:contentDescription="@string/next_mask"
            android:scaleType="centerInside"
            android:src="@drawable/arrow_right" />

        <TextView
            android:id="@+id/screenshotModeButton"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_above="@id/recordButton"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="25dp"
            android:background="@drawable/rounded_corners"
            android:clickable="true"
            android:elegantTextHeight="true"
            android:fadingEdgeLength="56dp"
            android:requiresFadingEdge="vertical"
            android:text="@string/screenshot"
            android:gravity="center" />

        <TextView
            android:id="@+id/recordModeButton"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_above="@id/recordButton"
            android:layout_alignParentStart="true"
            android:layout_marginStart="25dp"
            android:background="@drawable/rounded_corners"
            android:clickable="true"
            android:elegantTextHeight="true"
            android:fadingEdgeLength="32dp"
            android:requiresFadingEdge="horizontal"
            android:text="@string/record"
            android:gravity="center" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>